--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
-<p>Tel: 02084938285</p>
-<p>Email: mirror_mirror_on_the_wall@gmail.com</p>
+<p>Tel: +123456789</p>
+<p>Email: me@gmail.com</p>
 <p>Address:</p>
 <p>
-  64 Myriad Road<br />
-  Kendal<br />
-  Cumbria<br />
+  123 North Street<br />
+  Some City<br />
+  Some Country <br />
 </p>
