--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,9 +1,9 @@
-<h1>The Best Films According to Adjoa</h1>
-<h2>My top 3 films of all-time.</h2>
+<h1>The Best Movies According to Angela</h1>
+<h2>My top 3 movies of all-time.</h2>
 <hr />
-<h3>City of God</h3>
-<p>I really enjoy foreign films and this film took viewers into the heart of Brazilian favela life.</p>
-<h3>Selena</h3>
-<p>A factual, biographical film based on the singer. A brilliant performance by Jennifer Lopez.</p>
-<h3>A Bronx Tale</h3>
-<p>An epic New York mafia film.</p>
+<h3>Spirited Away</h3>
+<p>This is my favourite anime. I love the beautiful images.</p>
+<h3>Ex Machina</h3>
+<p>Really cool sci-fi movie.</p>
+<h3>Drive</h3>
+<p>Super beautiful film. Really artistic.</p>
